--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <div class="resumo-text">
         <h1>I'm Caynan Ramos</h1>
         <p>Front-end developer, apaixonado por ui e ux. Que apoia o software livre!</p>
-        <h3>Talvez te interese:</h3>
+        <h3>Talvez te interesse:</h3>
         <ul>
-          <li><a href="#">Linktree</a></li>
-          <li><a href="#">Spotify</a></li>
-          <li><a href="#">Instagram</a></li>
+          <li><a href="https://caynanr.github.io/my-linktree/" target="_blank">Linktree</a></li>
+          <li><a href="https://open.spotify.com/playlist/7x2zhLah6H5acgFeuHY2oo?si=6-4nvPuURcK2WUyExfLrSg" target="_blank">Spotify</a></li>
+          <li><a href="https://www.instagram.com/caynanr/" target="_blank">Instagram</a></li>
         </ul>
       </div>
       <div class="perfil">
@@ -57,11 +57,11 @@
 
         <div class="card">
           <div class="bg-card">
-            <img src="assets/card-login.png" alt="Projeto Card: Tênis da nike">
+            <img src="assets/card-login.png" alt="Projeto Card: Login">
           </div>
           <div class="card-content">
             <h3 class="title-card">Card Login</h3>
-            <p>CSS na prática: Estudo sobre posicionamento e um pouco de ui ux com css</p>
+            <p>Card de login responsivo com flexbox e trasition</p>
           </div>
           <div class="btn"><a href="#">Visit</a></div>
         </div>
@@ -69,13 +69,13 @@
 
         <div class="card">
           <div class="bg-card">
-            <img src="assets/shoes-final.png" alt="Projeto Card: Tênis da nike">
+            <img src="assets/centralmotos.png" alt="Projeto Cetral Motos">
           </div>
           <div class="card-content">
-            <h3 class="title-card">Card Shoes</h3>
-            <p>CSS na prática: Estudo sobre posicionamento e um pouco de ui ux com css</p>
+            <h3 class="title-card">Central Motos</h3>
+            <p>Site para a oficina Central Motos de Cabrália</p>
           </div>
-          <div class="btn"><a href="#">Visit</a></div>
+          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
         </div>
       </div>
     </section>
