--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h3 class="title-card">Card Shoes</h3>
             <p>CSS na prática: Estudo sobre posicionamento e um pouco de ui ux com css</p>
           </div>
-          <div class="btn"><a href="#">Visit</a></div>
+          <div class="btn"><a href="https://caynanr.github.io/desafio-papodedev-shoes/" target="_blank">Visit</a></div>
         </div>
 
 
@@ -63,7 +63,7 @@
             <h3 class="title-card">Card Login</h3>
             <p>Card de login responsivo com flexbox e trasition</p>
           </div>
-          <div class="btn"><a href="#">Visit</a></div>
+          <div class="btn"><a href="https://caynanr.github.io/login-flex/" target="_blank">Visit</a></div>
         </div>
 
 
