--- a/index.html
+++ b/index.html
@@ -77,6 +77,39 @@
           </div>
           <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
         </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/linktree-final.png" alt="Projeto Cetral Motos">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Central Motos</h3>
+            <p>Site para a oficina Central Motos de Cabrália</p>
+          </div>
+          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/cadastro-animado-final.png" alt="Projeto Cetral Motos">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Central Motos</h3>
+            <p>Site para a oficina Central Motos de Cabrália</p>
+          </div>
+          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/restaurante-card.png" alt="Projeto Cetral Motos">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Central Motos</h3>
+            <p>Site para a oficina Central Motos de Cabrália</p>
+          </div>
+          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+        </div>
       </div>
     </section>
   </main>
