--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h3 class="title-card">Card Login</h3>
             <p>Card de login responsivo com flexbox e trasition</p>
           </div>
-          <div class="btn"><a href="https://caynanr.github.io/login-flex/" target="_blank">Visit</a></div>
+          <div class="btn"><a href="https://caynanr.github.io/card-login/" target="_blank">Visit</a></div>
         </div>
 
 
@@ -80,35 +80,35 @@
 
         <div class="card">
           <div class="bg-card">
-            <img src="assets/linktree-final.png" alt="Projeto Cetral Motos">
+            <img src="assets/linktree-final.png" alt="Linktree">
           </div>
-          <div class="card-content">
-            <h3 class="title-card">Central Motos</h3>
-            <p>Site para a oficina Central Motos de Cabrália</p>
+          <div class=" card-content">
+            <h3 class="title-card">My linktree</h3>
+            <p>Meu linktree pessoal para divulgar em minhas redes sociais.</p>
           </div>
-          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+          <div class="btn"><a href="https://caynanr.github.io/my-linktree/" target="_blank">Visit</a></div>
         </div>
 
         <div class="card">
           <div class="bg-card">
-            <img src="assets/cadastro-animado-final.png" alt="Projeto Cetral Motos">
+            <img src="assets/cadastro-animado-final.png" alt="Login animado">
           </div>
           <div class="card-content">
-            <h3 class="title-card">Central Motos</h3>
-            <p>Site para a oficina Central Motos de Cabrália</p>
+            <h3 class="title-card">Casdastro animado</h3>
+            <p>Página de login e cadastro que muda com animação css e js.</p>
           </div>
-          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+          <div class="btn"><a href="https://caynanr.github.io/login-cadastro-animado/" target="_blank">Visit</a></div>
         </div>
 
         <div class="card">
           <div class="bg-card">
-            <img src="assets/restaurante-card.png" alt="Projeto Cetral Motos">
+            <img src="assets/restaurante-card.png" alt="Card restaurante">
           </div>
           <div class="card-content">
-            <h3 class="title-card">Central Motos</h3>
-            <p>Site para a oficina Central Motos de Cabrália</p>
+            <h3 class="title-card">Card Prato</h3>
+            <p>Estilo de card para um restaurante. Aperfeiçoando o css.</p>
           </div>
-          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+          <div class="btn"><a href="https://caynanr.github.io/card-restaurante/" target="_blank">Visit</a></div>
         </div>
       </div>
     </section>
