--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/764fee406e.js" crossorigin="anonymous"></script>
   <title>Caynan Ramos</title>
 </head>
 
@@ -61,7 +62,7 @@
           </div>
           <div class="card-content">
             <h3 class="title-card">Card Login</h3>
-            <p>Card de login responsivo com flexbox e trasition</p>
+            <p>Card de login responsivo com flexbox e transition</p>
           </div>
           <div class="btn"><a href="https://caynanr.github.io/card-login/" target="_blank">Visit</a></div>
         </div>
@@ -113,6 +114,9 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <p>made with <i class="fas fa-heart"></i></p>
+  </footer>
 </body>
 
 </html>
