--- a/index.html
+++ b/index.html
@@ -111,6 +111,70 @@
           </div>
           <div class="btn"><a href="https://caynanr.github.io/card-restaurante/" target="_blank">Visit</a></div>
         </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/3column.png" alt="3 column">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">3 column</h3>
+            <p>Desafio básico do Front end mentor para trabalhar html e css.</p>
+          </div>
+          <div class="btn"><a href="https://caynanr.github.io/3column-frontendmentor/" target="_blank">Visit</a></div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/car-dev.png" alt="Card Dev">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Card Dev</h3>
+            <p>Card para dev. Modulo para implementar no portfólio.</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/card-dev/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/card-profile.png" alt="Card Profile">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Card Profile</h3>
+            <p>Desafio do front end mentor que eu vi no youtube do Guilherme Chinaglia.</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/card-profile/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/signinform.png" alt="Sign In Form">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Sign In Form</h3>
+            <p>Formulário de Sign In. Aprendi com ele a usar ::before e ::after para estilizar o input type select</p>
+          </div>
+          <div class="btn">
+            <a href="caynanr.github.io/signinform/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/portfolio1.png" alt="Portfolio 1">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Portfolio</h3>
+            <p>Meu primeiro portfolio desenvolvido! Mas que nem usei.</p>
+          </div>
+          <div class="btn">
+            <a href="caynanr.github.io/portfolio1/" target="_blank">Visit</a>
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
