--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <p>Formulário de Sign In. Aprendi com ele a usar ::before e ::after para estilizar o input type select</p>
           </div>
           <div class="btn">
-            <a href="caynanr.github.io/signinform/" target="_blank">Visit</a>
+            <a href="https://caynanr.github.io/signinform/" target="_blank">Visit</a>
           </div>
         </div>
 
@@ -171,7 +171,7 @@
             <p>Meu primeiro portfolio desenvolvido! Mas que nem usei.</p>
           </div>
           <div class="btn">
-            <a href="caynanr.github.io/portfolio1/" target="_blank">Visit</a>
+            <a href="https://caynanr.github.io/portfolio1/" target="_blank">Visit</a>
           </div>
         </div>
 
