--- a/index.html
+++ b/index.html
@@ -175,6 +175,19 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/signupfinal.png" alt="Sign Up Form">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Sign Up Form</h3>
+            <p>Página de Sign Up onde eu tive que estilizar os inputs type radio ultilizando ::before e ::after</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/signupform/" target="_blank">Visit</a>
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
