--- a/index.html
+++ b/index.html
@@ -188,6 +188,45 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/price-grid.png" alt="Price Grid">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Price Grid</h3>
+            <p>Desafio front end mentor que eu fiz usando flexbox</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/grid-price/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/four-cards.png" alt="Four Cards">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Four Cards</h3>
+            <p>Desafio front end mentor feito usando flexbox</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/four-card/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/testimonial-grid.png" alt="Testimonial Grid">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Testimonial Grid</h3>
+            <p>Desafio do front end mentor que fiz usando flexbox, mas que pretendo refazer usando grid.</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/testimonials-grid/" target="_blank">Visit</a>
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
