--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
     <section class="resumo">
       <div class="resumo-text">
         <h1>I'm Caynan Ramos</h1>
-        <p>Front-end developer, apaixonado por ui e ux. Que apoia o software livre!</p>
-        <h3>Talvez te interesse:</h3>
+        <p>Front-end developer</p>
+        <h3>Contato:</h3>
         <ul>
-          <li><a href="https://caynanr.github.io/my-linktree/" target="_blank">Linktree</a></li>
-          <li><a href="https://open.spotify.com/playlist/7x2zhLah6H5acgFeuHY2oo?si=6-4nvPuURcK2WUyExfLrSg" target="_blank">Spotify</a></li>
+          <li><a href="#" target="_blank">Linkedin</a></li>
           <li><a href="https://www.instagram.com/caynanr/" target="_blank">Instagram</a></li>
+          <li><a href="#" target="_blank">Telegram</a></li>
+          <!-- <li><a href="https://caynanr.github.io/my-linktree/" target="_blank">Linktree</a></li>
+          <li><a href="https://open.spotify.com/playlist/7x2zhLah6H5acgFeuHY2oo?si=6-4nvPuURcK2WUyExfLrSg" target="_blank">Spotify</a></li> -->
+
         </ul>
       </div>
       <div class="perfil">
