--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <p>Front-end developer</p>
         <h3>Contato:</h3>
         <ul>
-          <li><a href="#" target="_blank">Linkedin</a></li>
+          <li><a href="https://www.linkedin.com/in/caynan-ramos-a54822207/" target="_blank">Linkedin</a></li>
           <li><a href="https://www.instagram.com/caynanr/" target="_blank">Instagram</a></li>
-          <li><a href="#" target="_blank">Telegram</a></li>
+          <li><a href="https://t.me/caynan" target="_blank">Telegram</a></li>
           <!-- <li><a href="https://caynanr.github.io/my-linktree/" target="_blank">Linktree</a></li>
           <li><a href="https://open.spotify.com/playlist/7x2zhLah6H5acgFeuHY2oo?si=6-4nvPuURcK2WUyExfLrSg" target="_blank">Spotify</a></li> -->
 
