--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li><a href="https://www.linkedin.com/in/caynan-ramos-a54822207/" target="_blank">Linkedin</a></li>
           <li><a href="https://www.instagram.com/caynanr/" target="_blank">Instagram</a></li>
           <li><a href="https://t.me/caynan" target="_blank">Telegram</a></li>
+          <li><a href="https://github.com/caynanr" target="_blank">Github</a></li>
           <!-- <li><a href="https://caynanr.github.io/my-linktree/" target="_blank">Linktree</a></li>
           <li><a href="https://open.spotify.com/playlist/7x2zhLah6H5acgFeuHY2oo?si=6-4nvPuURcK2WUyExfLrSg" target="_blank">Spotify</a></li> -->
 
@@ -46,6 +47,44 @@
       <h2>Projects</h2>
 
       <div class="cards-projects">
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/bikcraft.png" alt="bikcraft">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Bikcraft</h3>
+            <p>Curso de Web Design Completo da Origamid</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/bikcraft/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/centralmotos.png" alt="Projeto Cetral Motos">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Central Motos</h3>
+            <p>Site para a oficina Central Motos de Cabrália</p>
+          </div>
+          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/flexblogpng.png" alt="Flexblog">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Flexblog</h3>
+            <p>Projeto desenvolvido no curso de CSS Flexbox da Origamid</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/flexblog/" target="_blank">Visit</a>
+          </div>
+        </div>
 
         <div class="card">
           <div class="bg-card">
@@ -71,16 +110,6 @@
         </div>
 
 
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/centralmotos.png" alt="Projeto Cetral Motos">
-          </div>
-          <div class="card-content">
-            <h3 class="title-card">Central Motos</h3>
-            <p>Site para a oficina Central Motos de Cabrália</p>
-          </div>
-          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
-        </div>
 
         <div class="card">
           <div class="bg-card">
@@ -229,6 +258,64 @@
             <a href="https://caynanr.github.io/testimonials-grid/" target="_blank">Visit</a>
           </div>
         </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/socialaprov.png" alt="Social Proof">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Social proof</h3>
+            <p>Desafio do front end mentor</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/social-proof/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/wildbeast.png" alt="wildbeast">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Wildbeast</h3>
+            <p>Projeto feito no curso de CSS Grid Layout da Origamid</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/wildbeast/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/openenterprise.png" alt="Open Enterprise">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Open Enterprise</h3>
+            <p>Um dos primeiros layouts que desenvolvi usando css grid-layout</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/open-enterprise/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/devfinance.png" alt="Dev finance">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">dev.finance$</h3>
+            <p>Sistema financeiro deselvolvido com Javascript na maratona 01 da rocketseat</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/dev.finances/#" target="_blank">Visit</a>
+          </div>
+        </div>
+
+
+
+
+
+
 
       </div>
     </section>
