--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <section class="resumo">
       <div class="resumo-text">
         <h1>I'm Caynan Ramos</h1>
-        <p>Front-end developer</p>
+        <span>Front-end developer</span>
+        <p>Atualmente utilizo as seguintes tecnologia: HTML, CSS e JavaScript. Pretendo aprender React e Vue.js. Aqui tem todo o histórico da minha evolução. Os cursos que eu fiz, projetos pessoais e desafios.</p>
         <h3>Contato:</h3>
         <ul>
           <li><a href="https://www.linkedin.com/in/caynan-ramos-a54822207/" target="_blank">Linkedin</a></li>
