--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="resumo-text">
         <h1>I'm Caynan Ramos</h1>
         <span>Front-end developer</span>
-        <p>Aqui tem todo o histórico da minha evolução. Os cursos que eu fiz, projetos pessoais e desafios. Atualmente utilizo as seguintes tecnologia: HTML, CSS e JavaScript e pretendo aprender React e Vue.js. </p>
+        <p>Aqui tem todo o histórico da minha evolução. Os cursos que eu fiz, projetos pessoais e desafios. Atualmente utilizo as seguintes tecnologias: HTML, CSS e JavaScript e pretendo aprender React e Vue.js. </p>
         <h3>Contato:</h3>
         <ul>
           <li><a href="https://www.linkedin.com/in/caynan-ramos-a54822207/" target="_blank">Linkedin</a></li>
