--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
       <div class="resumo-text">
         <h1>I'm Caynan Ramos</h1>
         <span>Front-end developer</span>
-        <p>Aqui tem o histórico da minha evolução. Os cursos que eu fiz, projetos pessoais e desafios. Atualmente utilizo as seguintes tecnologias: HTML, CSS e JavaScript e pretendo aprender React e Vue.js. </p>
+        <p>Aqui tem o histórico da minha evolução. Os cursos que eu fiz, projetos pessoais e desafios. Atualmente utilizo as seguintes tecnologias: HTML, CSS, JavaScript e ReactJS. </p>
         <h3>Contato:</h3>
         <ul>
           <li><a href="https://www.linkedin.com/in/caynan-ramos-a54822207/" target="_blank">Linkedin</a></li>
           <li><a href="https://www.instagram.com/caynanr/" target="_blank">Instagram</a></li>
           <li><a href="https://t.me/caynan" target="_blank">Telegram</a></li>
           <li><a href="https://github.com/caynanr" target="_blank">Github</a></li>
-          <!-- <li><a href="https://caynanr.github.io/my-linktree/" target="_blank">Linktree</a></li>
-          <li><a href="https://open.spotify.com/playlist/7x2zhLah6H5acgFeuHY2oo?si=6-4nvPuURcK2WUyExfLrSg" target="_blank">Spotify</a></li> -->
-
+      
         </ul>
       </div>
       <div class="perfil">
@@ -63,18 +61,6 @@
           </div>
         </div>
 
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/centralmotos.png" alt="Projeto Cetral Motos">
-          </div>
-          <div class="card-content">
-            <h3 class="title-card">Central Motos</h3>
-            <p>Site para a oficina Central Motos de Cabrália</p>
-          </div>
-          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
-        </div>
-
         <div class="card">
           <div class="bg-card">
             <img src="assets/flexblogpng.png" alt="Flexblog">
@@ -88,6 +74,71 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/wildbeast.png" alt="wildbeast">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Wildbeast</h3>
+            <p>Projeto feito no curso de CSS Grid Layout da Origamid</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/wildbeast/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/animaisfantasticos.png" alt="Animais Fantásticos">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Animais Fantásticos</h3>
+            <p>Belo projeto desenvolvido com JavaScript no curso de ES6+ da Origamid</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/animais-fantasticos/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/devfinance.png" alt="Dev finance">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">dev.finance$</h3>
+            <p>Sistema financeiro deselvolvido com Javascript na maratona 01 da rocketseat</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/dev.finances/#" target="_blank">Visit</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/centralmotos.png" alt="Projeto Cetral Motos">
+          </div>
+          <div class="card-content">
+            <h3 class="title-card">Central Motos</h3>
+            <p>Site para a oficina Central Motos de Cabrália</p>
+          </div>
+          <div class="btn"><a href="https://caynanr.github.io/centralmotos/index.html" target="_blank">Visit</a></div>
+        </div>
+
+
+        <div class="card">
+          <div class="bg-card">
+            <img src="assets/openenterprise.png" alt="Open Enterprise">
+          </div>
+          <div class=" card-content">
+            <h3 class="title-card">Open Enterprise</h3>
+            <p>Um dos primeiros layouts que desenvolvi usando css grid-layout</p>
+          </div>
+          <div class="btn">
+            <a href="https://caynanr.github.io/open-enterprise/" target="_blank">Visit</a>
+          </div>
+        </div>
+
+      
         <div class="card">
           <div class="bg-card">
             <img src="assets/shoes-final.png" alt="Projeto Card: Tênis da nike">
@@ -145,179 +196,6 @@
           </div>
           <div class="btn"><a href="https://caynanr.github.io/card-restaurante/" target="_blank">Visit</a></div>
         </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/3column.png" alt="3 column">
-          </div>
-          <div class="card-content">
-            <h3 class="title-card">3 column</h3>
-            <p>Desafio básico do Front end mentor para trabalhar html e css.</p>
-          </div>
-          <div class="btn"><a href="https://caynanr.github.io/3column-frontendmentor/" target="_blank">Visit</a></div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/car-dev.png" alt="Card Dev">
-          </div>
-          <div class="card-content">
-            <h3 class="title-card">Card Dev</h3>
-            <p>Card para dev. Modulo para implementar no portfólio.</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/card-dev/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/card-profile.png" alt="Card Profile">
-          </div>
-          <div class="card-content">
-            <h3 class="title-card">Card Profile</h3>
-            <p>Desafio do front end mentor que eu vi no youtube do Guilherme Chinaglia.</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/card-profile/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/signinform.png" alt="Sign In Form">
-          </div>
-          <div class="card-content">
-            <h3 class="title-card">Sign In Form</h3>
-            <p>Formulário de Sign In. Aprendi com ele a usar ::before e ::after para estilizar o input type select</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/signinform/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/portfolio1.png" alt="Portfolio 1">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Portfolio</h3>
-            <p>Meu primeiro portfolio desenvolvido! Mas que nem usei.</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/portfolio1/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/signupfinal.png" alt="Sign Up Form">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Sign Up Form</h3>
-            <p>Página de Sign Up onde eu tive que estilizar os inputs type radio ultilizando ::before e ::after</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/signupform/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/price-grid.png" alt="Price Grid">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Price Grid</h3>
-            <p>Desafio front end mentor que eu fiz usando flexbox</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/grid-price/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/four-cards.png" alt="Four Cards">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Four Cards</h3>
-            <p>Desafio front end mentor feito usando flexbox</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/four-card/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/testimonial-grid.png" alt="Testimonial Grid">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Testimonial Grid</h3>
-            <p>Desafio do front end mentor que fiz usando flexbox, mas que pretendo refazer usando grid.</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/testimonials-grid/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/socialaprov.png" alt="Social Proof">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Social proof</h3>
-            <p>Desafio do front end mentor</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/social-proof/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/wildbeast.png" alt="wildbeast">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Wildbeast</h3>
-            <p>Projeto feito no curso de CSS Grid Layout da Origamid</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/wildbeast/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/openenterprise.png" alt="Open Enterprise">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">Open Enterprise</h3>
-            <p>Um dos primeiros layouts que desenvolvi usando css grid-layout</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/open-enterprise/" target="_blank">Visit</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="bg-card">
-            <img src="assets/devfinance.png" alt="Dev finance">
-          </div>
-          <div class=" card-content">
-            <h3 class="title-card">dev.finance$</h3>
-            <p>Sistema financeiro deselvolvido com Javascript na maratona 01 da rocketseat</p>
-          </div>
-          <div class="btn">
-            <a href="https://caynanr.github.io/dev.finances/#" target="_blank">Visit</a>
-          </div>
-        </div>
-
-
-
-
-
-
 
       </div>
     </section>
