--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="resumo">
       <div class="resumo-text">
         <h1>I'm Caynan Ramos</h1>
-        <span>- Front-end developer <br>- HTML, CSS, JavaScript e ReactJS</span>
+        <span>- FrontEnd Developer <br>- HTML, CSS, JavaScript e ReactJS</span>
         <!-- <p>Aqui tem o histórico da minha evolução. Os cursos que eu fiz, projetos pessoais e desafios. Atualmente utilizo as seguintes tecnologias: HTML, CSS, JavaScript e ReactJS. </p> -->
         <h3>Contato:</h3>
         <ul>
